add host to email URL template

--- a/flamerelay/templates/backend/email_new_checkin.html
+++ b/flamerelay/templates/backend/email_new_checkin.html
@@ -12,7 +12,7 @@
   <b>Image:</b>
   <br>
   {% if instance.image %}
-    <img src="{{ instance.image.url }}">
+    <img src="{{ request.get_host }}{{ instance.image.url }}">
   {% else %}
     <i>No image</i>
   {% endif %}
