--- a/flamerelay/templates/backend/email_new_checkin.html
+++ b/flamerelay/templates/backend/email_new_checkin.html
@@ -20,8 +20,8 @@
 <hr>
 <br>
 <h2>
-  <a href="{% url 'backend:unit' instance.unit.identifier %}">View Unit page</a>
+  <a href="{{ request.get_host }}{% url 'backend:unit' instance.unit.identifier %}">View Unit page</a>
 </h2>
 <br>
 <hr>
-<a href="{% url 'backend:unit' instance.unit.identifier %}action=unsubscribe">Unsubscribe from this lighter</a> or <a href="{% url 'users:detail' user.id %}">manage all your subscriptions</a>
+<a href="{{ request.get_host }}{% url 'backend:unit' instance.unit.identifier %}action=unsubscribe">Unsubscribe from this lighter</a> or <a href="{{ request.get_host }}{% url 'users:detail' user.id %}">manage all your subscriptions</a>
