--- a/flamerelay/templates/backend/unit.html
+++ b/flamerelay/templates/backend/unit.html
@@ -35,7 +35,14 @@
       {% for checkin in unit.annotated_checkin_set %}
         <div class="card">
           <div class="card-header">
-            {{ checkin.date_created|date:"d.m.Y" }} - {{ checkin.place|default:"<i>Place not given</i>" }}
+            <div class="row">
+              <div class="col">
+                {{ checkin.place|default:"<i>Place not given</i>" }}
+              </div>
+              <div class="col ms-auto text-end">
+                <small>{{ checkin.date_created|date:"d.m.Y" }} ({{ checkin.date_created|timesince }} ago)</small>
+              </div>
+            </div>
           </div>
           <div class="card-body">
             <p>
