--- a/flamerelay/templates/pages/about.html
+++ b/flamerelay/templates/pages/about.html
@@ -1,54 +1,111 @@
 {% extends "base.html" %}
 {% block content %}
   <div class="row">
-    <div class="col-sm-6">
-      <h1>How to make the most of this?</h1>
-      <h3>Who should I give the lighter to?</h3>
-      <p>
-        Anyone you want. It's your lighter, you decide.
-        I recommend giving it to someone who you think will enjoy silliness, and can further push the lighter far.
-        Maybe someone who's been having a rough time lately?
-        <br>
-        You can also try leave it in a busy place like at a bar, a club smoking room, airport lounges, or any other place you think like-minded people might end up int
-        <br>
-      </p>
-      <h3>Anything I should do with the lighter?</h3>
-      <p>
-        If you could, please <b>check that the lighter has enough fluid/gas</b>, If you can, please top it up. This way it can travel just that bit further.
-        You can also doodle on it, or decorate it in any way you want.
-      </p>
-      <h3>What do I do if the lighter died?</h3>
-      <p>If you can, please refill it. If you can't, please pass it on to someone else.</p>
+    <div class="col-sm-7">
+      <h1>
+        How to make the most of this? <small>(FAQ?)</small>
+      </h1>
+      <div class="card mb-3">
+        <div class="card-body">
+          <h4 class="card-title">Who should I give the lighter to?</h4>
+          <p class="card-text">
+            Anyone you want. It's your lighter, <b>you decide</b>.
+            I recommend giving it to someone who you think will enjoy silliness, and <b>who can further take the lighter far</b>; someone who will come across more people like this to give it to when they get to a new place.
+            Maybe someone who's been having a rough time lately?
+            <br>
+            You can also <b>try leave it in a busy place</b> like at a bar, a club smoking room, airport lounges, or any other place you think like-minded people might end up in.
+            It's a bit of a risk though, because it might get thrown away by someone who doesn't know what it is, or they won't be curious enough to check the site.
+            <br>
+          </p>
+        </div>
+      </div>
+      <div class="card mb-3">
+        <div class="card-body">
+          <h4 class="card-title">Anything I should do with the lighter?</h4>
+          <p class="card-text">
+            If you could, please <b>check that the lighter has enough fluid/gas</b>, If you can, please top it up. This way it can travel just that bit further.
+            <br>
+            You can also doodle on it, or decorate it in any way you want.
+          </p>
+        </div>
+      </div>
+      <div class="card mb-3">
+        <div class="card-body">
+          <h4 class="card-title">What do I do if the lighter died?</h4>
+          <p class="card-text">If you can, please refill it. If you can't, please pass it on to someone else.</p>
+        </div>
+      </div>
+      <div class="card mb-3">
+        <div class="card-body">
+          <h4 class="card-title">Why can I not see all the lighters?</h4>
+          <p class="card-text">
+            Kinda an arbitrary choice I made, but I feel like I'd like to <b>keep the experience special and personal</b> to those who have actually had the lighters in their hands.
+            This way people can feel like they can get a bit more personal without worrying about the whole world seeing their messages.
+            <br>
+            Want to write a little love-letter to your crush which they get to read when they check the lighter's history? Go ahead, no one will see it but them
+            (and the people who they will pass the lighter to, so watch out lmao).
+          </p>
+        </div>
+      </div>
+      <div class="card mb-3">
+        <div class="card-body">
+          <h4 class="card-title">Will you try make money off of this?</h4>
+          <p class="card-text">
+            Honesltly, I don't know. I'm not planning on it. I'd much rather keep funding this from my own pocket and donations.
+            <br>
+            This is my little personal project that I want to work on purely for fun, and when you start making money off of something it can quickly become a source of stress, so I'd rather avoid that.
+          </p>
+        </div>
+      </div>
     </div>
-    <div class="col-sm-6">
+    <div class="col-sm-5">
       <h1>About the project</h1>
-      <h3>Why?</h3>
-      <p>Because I wanted to. I'm funemployed.</p>
-      <h3>How?</h3>
-      <p>
-        <a href="https://github.com/jvacek/flamerelay">GitHub repo</a>
-      </p>
-      <h3>Who?</h3>
-      <p>
-        My name is Jonas. You can <a id="contact" href="">send me an email</a> or reach me via <a href="https://fosstodon.org/@jvacek">@jvacek@fosstodon.org</a>
-      </p>
-      <h3>Can I give you money?</h3>
-      <p>
-        Sure, these lighters don't grow on trees. <a href="https://github.com/sponsors/jvacek">Here's a link</a>
-      </p>
-      <h3>Is it secure?</h3>
-      <p>
-        At no point should anyone be able to get anything identifiable from the site.
-        I use accounts to prevent abuse, but other than that I avoid storing any personal information.
-        The EXIF info on the images should be washed out, and the location is manually input by you.
-      </p>
+      <div class="card mb-3">
+        <div class="card-body">
+          <h4 class="card-title">Why?</h4>
+          <p class="card-text">Because I wanted to. I'm funemployed.</p>
+        </div>
+      </div>
+      <div class="card mb-3">
+        <div class="card-body">
+          <h4 class="card-title">How?</h4>
+          <p class="card-text">
+            <a href="https://github.com/jvacek/flamerelay">GitHub repo</a>
+          </p>
+        </div>
+      </div>
+      <div class="card mb-3">
+        <div class="card-body">
+          <h4 class="card-title">Who?</h4>
+          <p class="card-text">
+            My name is Jonas. You can <a id="contact" href="">send me an email</a> or reach me via <a href="https://fosstodon.org/@jvacek">@jvacek@fosstodon.org</a>
+          </p>
+        </div>
+      </div>
+      <div class="card mb-3">
+        <div class="card-body">
+          <h4 class="card-title">Can I give you money?</h4>
+          <p class="card-text">
+            Sure, these lighters don't grow on trees. <a href="https://github.com/sponsors/jvacek">Here's a link</a>
+          </p>
+        </div>
+      </div>
+      <div class="card mb-3">
+        <div class="card-body">
+          <h4 class="card-title">Is it secure?</h4>
+          <p class="card-text">
+            At no point should anyone be able to get anything identifiable from the site.
+            I use accounts to prevent abuse, but other than that I avoid storing any personal information.
+            The EXIF info on the images should be washed out, and the location is manually input by you.
+          </p>
+        </div>
+      </div>
     </div>
-  </div>
-{% endblock content %}
-{% block inline_javascript %}
-  <script>
+  {% endblock content %}
+  {% block inline_javascript %}
+    <script>
       var encEmail = "anZhY2VrQHBtLm1l";
 const form = document.getElementById("contact");
 form.setAttribute("href", "mailto:".concat(atob(encEmail)));
-  </script>
-{% endblock inline_javascript %}
+    </script>
+  {% endblock inline_javascript %}
