Some minor template updates

--- a/flamerelay/templates/backend/unit.html
+++ b/flamerelay/templates/backend/unit.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block title %}
-  {{ unit }} | FlameRelay.org
+  {{ unit }} | {{ block.super }}
 {% endblock title %}
 {% block content %}
   <h1>{{ unit }}</h1>
