--- a/flamerelay/templates/pages/home.html
+++ b/flamerelay/templates/pages/home.html
@@ -47,6 +47,10 @@
     </div>
   </div>
   <hr>
+  <h2>Some fancy schmancy stats</h2>
+  <p>
+    ... that definitely <i>don't</i> demonstrate how early-stage this project is lol.
+  </p>
   <div class="row row-cols-1 row-cols-md-4 g-4">
     <div class="col">
       <div class="card">
