--- a/flamerelay/templates/base.html
+++ b/flamerelay/templates/base.html
@@ -25,7 +25,7 @@
       <!-- Your stuff: Third-party CSS libraries go here -->
       <!-- This file stores project-specific CSS -->
       <link href="{% static 'css/project.css' %}" rel="stylesheet">
-    {% endblock %}
+    {% endblock css %}
     <!-- Le javascript
     ================================================== -->
     {# Placed at the top of the document so pages load faster with defer #}
@@ -99,7 +99,7 @@
       {% if messages %}
         {% for message in messages %}
           <div class="alert alert-dismissible {% if message.tags %}alert-{{ message.tags }}{% endif %}">
-            {{ message }}
+            {{ message|safe }}
             <button type="button"
                     class="btn-close"
                     data-bs-dismiss="alert"
