--- a/flamerelay/templates/pages/about.html
+++ b/flamerelay/templates/pages/about.html
@@ -1,4 +1,7 @@
 {% extends "base.html" %}
+{% block title %}
+  About | {{ block.super }}
+{% endblock title %}
 {% block content %}
   <div class="row">
     <div class="col-sm-7">
