--- a/flamerelay/templates/backend/unit.html
+++ b/flamerelay/templates/backend/unit.html
@@ -4,19 +4,8 @@
 {% endblock title %}
 {% block content %}
   <h1>{{ unit }}</h1>
-  <div class="row">
-    <div class="col-sm-3">
-      <p>Distance Travelled : {{ unit.get_distance_travelled }}km</p>
-    </div>
-    <div class="col-sm-3">
-      <p>Checkin count : {{ unit.checkin_set.count }}</p>
-    </div>
-    <div class="col-sm-3">
-      <p>Subscriber count : {{ unit.subscribers.count }}</p>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-md-12">
+  <div class="row row-cols-1 row-cols-md-5 g-4 align-items-center">
+    <div class="col">
       <div class="btn-group pull-right">
         {% if request.user in unit.subscribers.all %}
           <a href="?action=unsubscribe" class="btn btn-danger">Unsubscribe</a>
@@ -25,6 +14,39 @@
         {% endif %}
         <a href="{% url 'backend:checkin' unit.identifier %}"
            class="btn btn-primary">New Checkin</a>
+      </div>
+    </div>
+    <div class="col">
+      <div class="card">
+        <div class="card-body p-2">
+          <p class="card-text">
+            <b>Distance Travelled</b>
+            <br>
+            {{ unit.get_distance_travelled }}km
+          </p>
+        </div>
+      </div>
+    </div>
+    <div class="col">
+      <div class="card">
+        <div class="card-body p-2">
+          <p class="card-text">
+            <b>Checkin count</b>
+            <br>
+            {{ unit.checkin_set.count }} checkin{{ unit.checkin_set.count|pluralize }}
+          </p>
+        </div>
+      </div>
+    </div>
+    <div class="col">
+      <div class="card">
+        <div class="card-body p-2">
+          <p class="card-text">
+            <b>Subscriber count</b>
+            <br>
+            {{ unit.subscribers.count }} user{{ unit.subscribers.count|pluralize }}
+          </p>
+        </div>
       </div>
     </div>
   </div>
