Add question about checkin frequency

--- a/flamerelay/templates/pages/about.html
+++ b/flamerelay/templates/pages/about.html
@@ -24,6 +24,17 @@
       </div>
       <div class="card mb-3">
         <div class="card-body">
+          <h4 class="card-title">Should I make more than one checkin?</h4>
+          <p class="card-text">
+            Make as many checkins as you want, but I definitely recommend making <b>at least one when you get the lighter</b>.
+            You can also keep <b>making ones whenever you go to a significant place</b>, like a different town, country, or a place you think is cool like a festival or the beach.
+            <br>
+            The idea is that you see the lighter travel from hand to hand and from place to place. Whatever you think you'd expect the people before and after you to put in, feel free to do just that.
+          </p>
+        </div>
+      </div>
+      <div class="card mb-3">
+        <div class="card-body">
           <h4 class="card-title">Anything I should do with the lighter?</h4>
           <p class="card-text">
             If you could, please <b>check that the lighter has enough fluid/gas</b>, If you can, please top it up. This way it can travel just that bit further.
