move money q into project side

--- a/flamerelay/templates/pages/about.html
+++ b/flamerelay/templates/pages/about.html
@@ -61,16 +61,6 @@
           </p>
         </div>
       </div>
-      <div class="card mb-3">
-        <div class="card-body">
-          <h4 class="card-title">Will you try make money off of this?</h4>
-          <p class="card-text">
-            Honesltly, I don't know. I'm not planning on it. I'd much rather keep funding this from my own pocket and donations.
-            <br>
-            This is my little personal project that I want to work on purely for fun, and when you start making money off of something it can quickly become a source of stress, so I'd rather avoid that.
-          </p>
-        </div>
-      </div>
     </div>
     <div class="col-sm-5">
       <h1>About the project</h1>
@@ -111,6 +101,18 @@
             At no point should anyone be able to get anything identifiable from the site.
             I use accounts to prevent abuse, but other than that I avoid storing any personal information.
             The EXIF info on the images should be washed out, and the location is manually input by you.
+          </p>
+        </div>
+      </div>
+      <div class="card mb-3">
+        <div class="card-body">
+          <h4 class="card-title">Will you try make money off of this?</h4>
+          <p class="card-text">
+            Honesltly, I don't know. I'm not planning on it. I'd much rather keep funding this from my own pocket and donations.
+            <br>
+            This is my little personal project that I want to work on purely for fun, and when you start making money off of something it can quickly become a source of stress, so I'd rather avoid that.
+            <br>
+            Either way, your personal identifiable information will never be sold or given to anyone.
           </p>
         </div>
       </div>
