Add text on how to help out

--- a/flamerelay/templates/pages/about.html
+++ b/flamerelay/templates/pages/about.html
@@ -15,10 +15,10 @@
             Anyone you want. It's your lighter, <b>you decide</b>.
             I recommend giving it to someone who you think will enjoy silliness, and <b>who can further take the lighter far</b>; someone who will come across more people like this to give it to when they get to a new place.
             Maybe someone who's been having a rough time lately?
-            <br>
+          </p>
+          <p class="card-text">
             You can also <b>try leave it in a busy place</b> like at a bar, a club smoking room, airport lounges, or any other place you think like-minded people might end up in.
             It's a bit of a risk though, because it might get thrown away by someone who doesn't know what it is, or they won't be curious enough to check the site.
-            <br>
           </p>
         </div>
       </div>
@@ -28,7 +28,8 @@
           <p class="card-text">
             Make as many checkins as you want, but I definitely recommend making <b>at least one when you get the lighter</b>.
             You can also keep <b>making ones whenever you go to a significant place</b>, like a different town, country, or a place you think is cool like a festival or the beach.
-            <br>
+          </p>
+          <p class="card-text">
             The idea is that you see the lighter travel from hand to hand and from place to place. Whatever you think you'd expect the people before and after you to put in, feel free to do just that.
           </p>
         </div>
@@ -38,9 +39,8 @@
           <h4 class="card-title">Anything I should do with the lighter?</h4>
           <p class="card-text">
             If you could, please <b>check that the lighter has enough fluid/gas</b>, If you can, please top it up. This way it can travel just that bit further.
-            <br>
-            You can also doodle on it, or decorate it in any way you want.
           </p>
+          <p class="card-text">You can also doodle on it, or decorate it in any way you want.</p>
         </div>
       </div>
       <div class="card mb-3">
@@ -55,7 +55,8 @@
           <p class="card-text">
             Kinda an arbitrary choice I made, but I feel like I'd like to <b>keep the experience special and personal</b> to those who have actually had the lighters in their hands.
             This way people can feel like they can get a bit more personal without worrying about the whole world seeing their messages.
-            <br>
+          </p>
+          <p class="card-text">
             Want to write a little love-letter to your crush which they get to read when they check the lighter's history? Go ahead, no one will see it but them
             (and the people who they will pass the lighter to, so watch out lmao).
           </p>
@@ -102,6 +103,9 @@
             I use accounts to prevent abuse, but other than that I avoid storing any personal information.
             The EXIF info on the images should be washed out, and the location is manually input by you.
           </p>
+          <p class="card-text">
+            Don't believe me? The code is open for everyone to see. You can even run your own flamerelay, just please call it something else.
+          </p>
         </div>
       </div>
       <div class="card mb-3">
@@ -109,10 +113,25 @@
           <h4 class="card-title">Will you try make money off of this?</h4>
           <p class="card-text">
             Honesltly, I don't know. I'm not planning on it. I'd much rather keep funding this from my own pocket and donations.
-            <br>
+          </p>
+          <p class="card-text">
             This is my little personal project that I want to work on purely for fun, and when you start making money off of something it can quickly become a source of stress, so I'd rather avoid that.
-            <br>
-            Either way, your personal identifiable information will never be sold or given to anyone.
+          </p>
+          <p class="card-text">Either way, your personal identifiable information will never be sold or given to anyone.</p>
+        </div>
+      </div>
+      <div class="card mb-3">
+        <div class="card-body">
+          <h4 class="card-title">Is there any way I can help?</h4>
+          <p class="card-text">
+            Sure! Even if you don't code, I'm looking for people who would be happy to buy their own lighters and register them into the system.
+            I'm not at the stage where I can make this self-service, so just reach out to me using the contact info above.
+          </p>
+          <p class="card-text">
+            If you do code, I'm happy to accept pull requests, just make sure to open an issue first so we can discuss it! I've still got a bunch of stuff to do in the backend, and I would ideally also have a proper frontend for this.
+          </p>
+          <p class="card-text">
+            And if you just feel like donating, feel free to do that using my <a href="https://github.com/sponsors/jvacek">GitHub Sponsor page</a>
           </p>
         </div>
       </div>
