--- a/flamerelay/templates/pages/home.html
+++ b/flamerelay/templates/pages/home.html
@@ -93,4 +93,17 @@
       </div>
     </div>
   </div>
+  <br>
+  <div class="card text-white bg-primary mb-3">
+    <div class="card-header">Want to help this project?</div>
+    <div class="card-body">
+      <h5 class="card-title">You don't have to know how to code!</h5>
+      <p class="card-text">
+        Would you like to start distributing your own lighters and registering them on FlameRelay? Or maybe you <i>do</i> know how to code and want to help me out?
+      </p>
+      <p class="card-text">
+        Check the <a class="text-white" href="{% url 'about' %}">About page</a> to see how it works, and get in touch!
+      </p>
+    </div>
+  </div>
 {% endblock content %}
