Correct a bunch of spelling and phrasing

--- a/flamerelay/templates/backend/checkin_create.html
+++ b/flamerelay/templates/backend/checkin_create.html
@@ -23,7 +23,7 @@
         <div class="card-body">
           <h5 class="card-title">Please make sure to read the FAQ!</h5>
           <p class="card-text">
-            What you do after you submit this checkin will decide the future of this project.
+            What you do after you submit this check-in will decide the future of this project.
             <br>
             So please give the <a href="{% url 'about' %}">about page</a> a quick check after you're done.
             <br>
