--- a/flamerelay/templates/backend/checkin_edit.html
+++ b/flamerelay/templates/backend/checkin_edit.html
@@ -23,7 +23,7 @@
         <div class="card-body">
           <h5 class="card-title">Please make sure to read the FAQ!</h5>
           <p class="card-text">
-            What you do after you submit this checkin will decide the future of this project.
+            What you do after you submit this check-in will decide the future of this project.
             <br>
             So please give the <a href="{% url 'about' %}">about page</a> a quick check after you're done.
             <br>
@@ -41,7 +41,7 @@
     {% crispy form %}
     <div class="card border-warning">
       <div class="card-body">
-        <p class='card-text'>Please note that you can only edit checkins for 6 hours!</p>
+        <p class="card-text">Please note that you can only edit check-ins for 6 hours!</p>
       </div>
     </div>
     <br>
