--- a/flamerelay/templates/backend/email_new_checkin.html
+++ b/flamerelay/templates/backend/email_new_checkin.html
@@ -2,7 +2,7 @@
 <br>
 <div>
   <p>
-    <b>Checkin created at</b>: {{ instance.date_created }}
+    <b>Check-in created at</b>: {{ instance.date_created }}
   </p>
   <p>
     <b>Message</b>: {{ instance.message }}
