--- a/flamerelay/templates/pages/home.html
+++ b/flamerelay/templates/pages/home.html
@@ -65,7 +65,7 @@
       <div class="card">
         {% comment %} <img src="..." class="card-img-top" alt="..."> {% endcomment %}
         <div class="card-body">
-          <h5 class="card-title">Total checkins made</h5>
+          <h5 class="card-title">Total check-ins made</h5>
           <p class="card-text">{{ checkin_count }}</p>
         </div>
       </div>
@@ -74,7 +74,7 @@
       <div class="card">
         {% comment %} <img src="..." class="card-img-top" alt="..."> {% endcomment %}
         <div class="card-body">
-          <h5 class="card-title">Total disteance travelled</h5>
+          <h5 class="card-title">Total distance traveled</h5>
           <p class="card-text">
             <i>Still need to write this code</i>
           </p>
