--- a/flamerelay/templates/pages/about.html
+++ b/flamerelay/templates/pages/about.html
@@ -5,32 +5,30 @@
 {% block content %}
   <div class="row">
     <div class="col-sm-7">
-      <h1>
-        How to make the most of this? <small>(FAQ?)</small>
-      </h1>
+      <h1>FAQ</h1>
       <div class="card mb-3">
         <div class="card-body">
           <h4 class="card-title">Who should I give the lighter to?</h4>
           <p class="card-text">
             Anyone you want. It's your lighter, <b>you decide</b>.
-            I recommend giving it to someone who you think will enjoy silliness, and <b>who can further take the lighter far</b>; someone who will come across more people like this to give it to when they get to a new place.
+            I recommend giving it to someone who you think will enjoy silliness, and <b>who can help the lighter travel as far as possible</b>; someone who you think will come across more people with a similar spirit.
             Maybe someone who's been having a rough time lately?
           </p>
           <p class="card-text">
-            You can also <b>try leave it in a busy place</b> like at a bar, a club smoking room, airport lounges, or any other place you think like-minded people might end up in.
+            Otherwise, maybe you can also <b>try leave it in a busy place</b> like at a bar, a club smoking room, airport lounges, or any other place you think like-minded people might end up in.
             It's a bit of a risk though, because it might get thrown away by someone who doesn't know what it is, or they won't be curious enough to check the site.
           </p>
         </div>
       </div>
       <div class="card mb-3">
         <div class="card-body">
-          <h4 class="card-title">Should I make more than one checkin?</h4>
+          <h4 class="card-title">Should I make more than one check-in?</h4>
           <p class="card-text">
-            Make as many checkins as you want, but I definitely recommend making <b>at least one when you get the lighter</b>.
+            Make as many check-ins as you want, but I definitely recommend making <b>at least one when you get the lighter</b>.
             You can also keep <b>making ones whenever you go to a significant place</b>, like a different town, country, or a place you think is cool like a festival or the beach.
           </p>
           <p class="card-text">
-            The idea is that you see the lighter travel from hand to hand and from place to place. Whatever you think you'd expect the people before and after you to put in, feel free to do just that.
+            The idea is that you see the lighter travel from hand to hand and from place to place. As a rule of thumb, check-in when you would expect/want other people to check-in.
           </p>
         </div>
       </div>
@@ -38,7 +36,7 @@
         <div class="card-body">
           <h4 class="card-title">Anything I should do with the lighter?</h4>
           <p class="card-text">
-            If you could, please <b>check that the lighter has enough fluid/gas</b>, If you can, please top it up. This way it can travel just that bit further.
+            If you can, please <b>top up the lighter</b> before passing it on if possible. That way it will travel that little bit further
           </p>
           <p class="card-text">You can also doodle on it, or decorate it in any way you want.</p>
         </div>
@@ -53,8 +51,8 @@
         <div class="card-body">
           <h4 class="card-title">Why can I not see all the lighters?</h4>
           <p class="card-text">
-            Kinda an arbitrary choice I made, but I feel like I'd like to <b>keep the experience special and personal</b> to those who have actually had the lighters in their hands.
-            This way people can feel like they can get a bit more personal without worrying about the whole world seeing their messages.
+            It's an arbitrary choice I made, but I feel like I'd like to <b>keep the experience special and personal</b> to those who have actually had the lighters in their hands.
+            Hopefully this will also encourage you to be more personal with your check-ins as you won't worry about the whole world seeing your messages.
           </p>
           <p class="card-text">
             Want to write a little love-letter to your crush which they get to read when they check the lighter's history? Go ahead, no one will see it but them
@@ -104,7 +102,7 @@
             The EXIF info on the images should be washed out, and the location is manually input by you.
           </p>
           <p class="card-text">
-            Don't believe me? The code is open for everyone to see. You can even run your own flamerelay, just please call it something else.
+            Don't believe me? The code is open for everyone to see. You can even run your own FlameRelay, just please call it something else.
           </p>
         </div>
       </div>
@@ -112,7 +110,7 @@
         <div class="card-body">
           <h4 class="card-title">Will you try make money off of this?</h4>
           <p class="card-text">
-            Honesltly, I don't know. I'm not planning on it. I'd much rather keep funding this from my own pocket and donations.
+            Honestly, I don't know. I'm not planning on it. I'd much rather keep funding this from my own pocket and donations.
           </p>
           <p class="card-text">
             This is my little personal project that I want to work on purely for fun, and when you start making money off of something it can quickly become a source of stress, so I'd rather avoid that.
