--- a/flamerelay/templates/backend/unit.html
+++ b/flamerelay/templates/backend/unit.html
@@ -20,7 +20,7 @@
         {% endif %}
       </div>
     </div>
-    <div class="col-2">
+    <div class="col-md-2">
       <div class="card">
         <div class="card-body p-2">
           <p class="card-text">
@@ -31,7 +31,7 @@
         </div>
       </div>
     </div>
-    <div class="col-sm-2">
+    <div class="col-md-2">
       <div class="card">
         <div class="card-body p-2">
           <p class="card-text">
@@ -42,7 +42,7 @@
         </div>
       </div>
     </div>
-    <div class="col-sm-2">
+    <div class="col-md-2">
       <div class="card">
         <div class="card-body p-2">
           <p class="card-text">
@@ -56,11 +56,11 @@
   </div>
   <h3>Travel log</h3>
   <div class="row">
-    <div class="col-sm-7">{{ map_html | safe }}</div>
-    <div class="col-sm-5">
+    <div class="col-lg-7 mb-3">{{ map_html | safe }}</div>
+    <div class="col-lg-5">
       {% for checkin in unit.annotated_checkin_set %}
         <div class="card">
-          <div class="card-header">
+          <div class="card-header p-2">
             <div class="row">
               <div class="col-auto">
                 {{ checkin.place|default:"<i>Place not given</i>" }}
@@ -100,16 +100,16 @@
             </div>
           {% endif %}
         </div>
-        <div class="row">
-          <div class="col-sm-5">
+        <div class="row align-items-center">
+          <div class="col-5">
             <hr>
           </div>
-          <div class="col-sm-2">
-            <p class="text-center">
+          <div class="col-2">
+            <p class="text-center mb-0">
               <i><small>{{ checkin.duration_text }}</small></i>
             </p>
           </div>
-          <div class="col-sm-5">
+          <div class="col-5">
             <hr>
           </div>
         </div>
