--- a/flamerelay/templates/pages/home.html
+++ b/flamerelay/templates/pages/home.html
@@ -1,29 +1,48 @@
 {% extends "base.html" %}
 {% block content %}
-  <h1>FlameRelay</h1>
-  <div class="p-3 mb-2 bg-warning text-dark">
+  <div class="p-3 mb-2 bg-warning text-dark text-center">
     FYI This is an early version. Bugs or feature suggestions? Check the <a href="{% url 'about' %}">About page</a> for GitHub/contact info.
   </div>
-  <!-- Chat GPT JS here we go lol -->
-  <div class="row mb-6">
-    <div class="col-lg-5 border-right">
-      <h2 for="unit_identifier">Find a lighter by name</h2>
-      <form id="my-form" method="get" action="{% url 'backend:unit_lookup' %}">
-        <div class="form-row align-items-center">
-          {% comment %} <div class="form-group"> {% endcomment %}
-          <input type="text"
-                 class="form-control"
-                 placeholder="John-01"
-                 name='identifier'>
-          <small id="emailHelp" class="form-text text-muted">Should be on the sticker, e.g. "John-01".</small>
-        </div>
-        <button type="submit" class="btn btn-primary">See where it's been!</button>
-      </form>
-      <p>
+  <div class="px-4 py-5 my-5 text-center">
+    <img class="d-block mx-auto mb-4"
+         src="/docs/5.0/assets/brand/bootstrap-logo.svg"
+         alt=""
+         width="72"
+         height="57">
+    <h1 class="display-5 fw-bold">Check a lighter's journey</h1>
+    <div class="col-lg-6 mx-auto">
+      <p class="lead mb-4">
+        Found a lighter with a FlameRelay.org sticker?
         <br>
-        <a href={% url 'backend:unit' "test-123" %}>Here's an example lighter</a> If you want to take a look at what this looks like.
+        This is where you can put the name of the lighter and see where it's been!
+        <br>
       </p>
+      <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
+        <form class="form-inline"
+              id="my-form"
+              method="get"
+              action="{% url 'backend:unit_lookup' %}">
+          <div class="row">
+            <div class="col">
+              <input type="text"
+                     class="form-control"
+                     placeholder="John-01"
+                     name='identifier'>
+            </div>
+            <div class="col">
+              <button type="submit" class="btn btn-primary">See where it's been!</button>
+            </div>
+          </div>
+        </form>
+      </div>
+      <div class="row m-4">
+        <p>
+          <a href={% url 'backend:unit' "test-123" %}>Here's an example lighter</a> If you want to take a look at what this looks like.
+        </p>
+      </div>
     </div>
+  </div>
+  <div class="row mb-6 justify-content-sm-center pb-6">
     <div class="col-lg-7">
       <div class="card">
         <h4 class="card-header">Hold up what is this?</h4>
@@ -46,55 +65,56 @@
       </div>
     </div>
   </div>
-  <hr>
-  <h2>Some fancy schmancy stats</h2>
-  <p>
-    ... that definitely <i>don't</i> demonstrate how early-stage this project is lol.
-  </p>
-  <div class="row row-cols-1 row-cols-lg-4 g-4">
-    <div class="col-lg-3">
-      <div class="card">
-        {% comment %} <img src="..." class="card-img-top" alt="..."> {% endcomment %}
-        <div class="card-body">
-          <h5 class="card-title">Total registered lighters</h5>
-          <p class="card-text">{{ lighter_count }}</p>
+  <div class="text-center p-5">
+    <h2>Some fancy schmancy stats</h2>
+    <p>
+      ... that definitely <i>don't</i> demonstrate how early-stage this project is lol.
+    </p>
+    <div class="row row-cols-1 row-cols-lg-4 g-4">
+      <div class="col-lg-3">
+        <div class="card">
+          {% comment %} <img src="..." class="card-img-top" alt="..."> {% endcomment %}
+          <div class="card-body">
+            <h5 class="card-title">Total registered lighters</h5>
+            <p class="card-text">{{ lighter_count }}</p>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="col-lg-3">
-      <div class="card">
-        {% comment %} <img src="..." class="card-img-top" alt="..."> {% endcomment %}
-        <div class="card-body">
-          <h5 class="card-title">Total check-ins made</h5>
-          <p class="card-text">{{ checkin_count }}</p>
+      <div class="col-lg-3">
+        <div class="card">
+          {% comment %} <img src="..." class="card-img-top" alt="..."> {% endcomment %}
+          <div class="card-body">
+            <h5 class="card-title">Total check-ins made</h5>
+            <p class="card-text">{{ checkin_count }}</p>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="col-lg-3">
-      <div class="card">
-        {% comment %} <img src="..." class="card-img-top" alt="..."> {% endcomment %}
-        <div class="card-body">
-          <h5 class="card-title">Total distance traveled</h5>
-          <p class="card-text">
-            <i>Still need to write this code</i>
-          </p>
+      <div class="col-lg-3">
+        <div class="card">
+          {% comment %} <img src="..." class="card-img-top" alt="..."> {% endcomment %}
+          <div class="card-body">
+            <h5 class="card-title">Total distance traveled</h5>
+            <p class="card-text">
+              <i>Still need to write this code</i>
+            </p>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="col-lg-3">
-      <div class="card">
-        {% comment %} <img src="..." class="card-img-top" alt="..."> {% endcomment %}
-        <div class="card-body">
-          <h5 class="card-title">Total countries seen</h5>
-          <p class="card-text">
-            <i>Yeah the code needs to get there first lol</i>
-          </p>
+      <div class="col-lg-3">
+        <div class="card">
+          {% comment %} <img src="..." class="card-img-top" alt="..."> {% endcomment %}
+          <div class="card-body">
+            <h5 class="card-title">Total countries seen</h5>
+            <p class="card-text">
+              <i>Yeah the code needs to get there first lol</i>
+            </p>
+          </div>
         </div>
       </div>
     </div>
   </div>
   <br>
-  <div class="card border-primary mb-3">
+  <div class="card border-primary mb-5">
     <div class="card-header">Want to help this project?</div>
     <div class="card-body">
       <h5 class="card-title">You don't have to know how to code!</h5>
