comment out image until I find something nice

--- a/flamerelay/templates/pages/home.html
+++ b/flamerelay/templates/pages/home.html
@@ -4,11 +4,7 @@
     FYI This is an early version. Bugs or feature suggestions? Check the <a href="{% url 'about' %}">About page</a> for GitHub/contact info.
   </div>
   <div class="px-4 py-5 my-5 text-center">
-    <img class="d-block mx-auto mb-4"
-         src="/docs/5.0/assets/brand/bootstrap-logo.svg"
-         alt=""
-         width="72"
-         height="57">
+    {% comment %} <img class="d-block mx-auto mb-4" src="/docs/5.0/assets/brand/bootstrap-logo.svg" alt="" width="72" height="57"> {% endcomment %}
     <h1 class="display-5 fw-bold">Check a lighter's journey</h1>
     <div class="col-lg-6 mx-auto">
       <p class="lead mb-4">
